# MealMaker9000

./: .gitignore  Prompt  README.md  api.py  default.nix  example_list.json  food.http  openai.py  pyproject.toml  test.py  test_calendar.py  test_task_list.py
backend/: pyproject.toml
backend/data_formats/: Daily_Meal_Plan.json
backend/experimentation/: format.py  main.py  meal_plan.json  prompt.txt
backend/src/: llm_tools.py  main.py  meal_maker.py  prompt.txt  prompt_v1.txt  prompt_v2.txt
data_formats/: Shopping_List.json  example_meals.json  list2.json
frontend/: index.html  script.js  style.css
